--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.5",
     "next": "14.0.4",
